# email2kg

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  AWS_DEPLOYMENT.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOY_EC2_GUIDE.md  DIAGNOSE_AUTH_ERROR.md  GMAIL_PRODUCTION_SETUP.md  MESSAGING.md  OCR_EMAIL_EXTRACTION.md  OCR_OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  QUICK_IP_UPDATE.md  README.md  TESTING_DEPLOYMENT.md  UI_DESIGN.md  add_columns.sql  check-logs.sh  deploy-aws.sh  deploy-ec2.sh  diagnose-signup-error.sh  docker-compose.dev.yml  docker-compose.http-only.yml  docker-compose.yml  fix-frontend-url.sh  nginx-ec2.conf  pyproject.toml  quick-fix-frontend.sh  rebuild-containers.sh  rebuild-frontend.sh  setup-letsencrypt.sh  setup.sh  sync-from-github.sh  verify-frontend-url.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  requirements.txt  start_celery.sh
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: auth_routes.py  feedback_routes.py  routes.py
backend/app/core/: auth.py  celery_app.py  config.py  security.py
backend/app/db/: models.py
backend/app/schemas/: auth.py
backend/app/services/: gmail_service.py  graph_service.py  llm_service.py  optimized_ocr_service.py  pdf_service.py  processing_service.py  query_service.py  template_service.py  vision_ocr_service.py
backend/app/services/messaging/: __init__.py  base_provider.py  email_providers.py  telegram_provider.py  whatsapp_provider.py
backend/app/workers/: attachment_processor.py  document_processor.py
docs/: BUSINESS_CASE.md  ENGINEERING_EXCELLENCE.md  FAANG_OPTIMIZATION_SUMMARY.md  INVESTOR_OVERVIEW.md  JOB_DESCRIPTIONS.md  README.md  ROADMAP.md  TEAM_COMPOSITION.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE.md
docs/deployment/: EC2_DEPLOYMENT.md  EC2_IP_MANAGEMENT.md  HTTPS_NOT_WORKING.md  IP_CHANGE_CHECKLIST.md  NAMECHEAP_DNS_UPDATE.md  QUICK_START_SSL.md  README.md  SSL_RENEWAL_FIX.md  SSL_SETUP_GUIDE.md  ec2-guide.md  https-setup.md
docs/deployment/systemd/: email2kg-backend.service
docs/troubleshooting/: API_404_ERRORS.md  OAUTH_ERRORS.md  TROUBLESHOOT_README.md
frontend/: .dockerignore  Dockerfile  nginx-http-only.conf  nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: Auth.css  Dashboard.tsx  DocumentViewer.tsx  EmailActivityFeed.css  EmailActivityFeed.tsx  EmailViewer.tsx  GmailConnect.tsx  GmailStatusWidget.css  GmailStatusWidget.tsx  KnowledgeGraph.tsx  LandingPage.css  LandingPage.tsx  Login.tsx  Query.tsx  Register.tsx  TransactionList.tsx  Upload.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/services/: api.ts  authService.ts
frontend/src/types/: index.ts
scripts/deployment/: README.md  deploy-ec2.sh  enable-https.sh  enable-ssl-now.sh  final-ssl-fix.sh  fix-docker-build.sh  fix-nginx-config.sh  fix-renewal.sh  fix-ssl-missing.sh  renew-cert-hook.sh  run-ssl-setup.sh  setup-https.sh
scripts/utils/: debug-frontend.sh  diagnose-api.sh  diagnose-https.sh  quick-ssl-check.sh  update-domain.sh
systemd/: email2kg-frontend.service
